--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/ListadoParticipante.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/ListadoParticipante.cshtml
@@ -32,6 +32,7 @@
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <button type="button" class="btn btn-success" id="btnEnviarCorreo">Enviar Correo</button>
+            <a href="#" id="lblRutaLink" class="btn btn-default glyphicon glyphicon glyphicon-globe" style="display:none" target="_blank"> Link</a>
         </div>
     </div>
 </form>
