--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/Index.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/Index.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Administración de promociones";
 }
 @*<script src="~/Scripts/Areas/Administrador/Promocion.js"></script>*@
+<script src="~/Scripts/jquery/jquery-ui-1.8.24.min.js"></script>
 <h2>Administración de promociones</h2>
 <input type="button" id="btnNuevaPromocion" class="btnNuevaPromocion btn btn-primary" value="Nuevo Registro" />
 <hr />
@@ -34,8 +35,7 @@
 
 <script>
 
-
-
+    
     CargarListado();
 
     function CargarListado() {
