--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Alumno/Views/Evaluacion/_PartialSiguientePaginaEval.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Alumno/Views/Evaluacion/_PartialSiguientePaginaEval.cshtml
@@ -302,7 +302,7 @@ else
         </div>
 }
     <div class="row">
-        <div class="col-md-1 col-xs-1">
+        <div class="col-md-4 col-xs-4">
             <div class="form-group">
                 @if ((bool)ViewBag.AnteriorPagEvaluacion)
                 {
@@ -310,9 +310,9 @@ else
                 }
             </div>
         </div>
-        <div class="col-md-10 col-xs-10">
+        <div class="col-md-4 col-xs-4">
         </div>
-        <div class="col-md-1 col-xs-1">
+        <div class="col-md-4 col-xs-4 text-right">
             @if ((bool)ViewBag.FinalizarEvaluacion)
             {
                 <div class="form-group">
