--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/Index.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/Index.cshtml
@@ -4,6 +4,10 @@
 }
 @*<script src="~/Scripts/Areas/Administrador/Promocion.js"></script>*@
 <script src="~/Scripts/jquery/jquery-ui-1.8.24.min.js"></script>
+<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery.ui.datepicker.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery.ui.theme.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery.ui.core.css" rel="stylesheet" />
 <h2>Administración de promociones</h2>
 <input type="button" id="btnNuevaPromocion" class="btnNuevaPromocion btn btn-primary" value="Nuevo Registro" />
 <hr />
