--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Index.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Index.cshtml
@@ -23,6 +23,8 @@
 <link href="~/Scripts/Datatable/css/jquery.dataTables.min.css" rel="stylesheet" />
 <link href="~/Scripts/Datatable/css/dataTables.jqueryui.min.css" rel="stylesheet" />
 <link href="~/Scripts/Datatable/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery.ui.all.css" rel="stylesheet" />
+<link href="~/Content/themes/base/jquery.ui.datepicker.css" rel="stylesheet" />
 <script>
 
   
@@ -138,7 +140,19 @@
 
     $(document).on('click', '#btnEnviarCorreo', function () {
         if (confirm("Se enviará un correo al siguiente destinatario: " + $("#hidEvaluacionPromocionCorreo").val() + " \n\n ¿Esta seguro de realizar el envío masivo?")) {
-            alert("Enviando....");
+            //alert("Enviando....");
+            $.ajax({
+                'url': URL_PAGE + 'Administrador/Link/EnviarMail',
+                'type': 'POST',
+                'data': {
+                    destinatario: $("#hidEvaluacionPromocionCorreo").val()
+                },
+                'success': function (view) {
+                    //process here
+                    //$("#divListadoPromocionLinks").html(view);
+                    alert("Enviado...");
+                }
+            });
         }
     });
 
