Validación de código de participante de la promoción.

--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Alumno/Views/Registro/Formulario.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Alumno/Views/Registro/Formulario.cshtml
@@ -87,7 +87,7 @@
             </div>
             <div id="divExisteEval" style="display: none" class="text-center alert alert-warning">
                 <h1><span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span> <strong>Advertencia</strong> <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span></h1>
-                <h2>Usted ya realizó la evaluación.</h2>
+                <h2 id="lblmensaje"></h2>
             </div>
         }
         else
