Cambios Email y link controller

--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Email.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Email.cshtml
@@ -1,18 +1,66 @@
-﻿
-
-
-<div>
-    Estimado usuario,
-    as
-    dasdas
-    dasdas
-    d
-    as
-    d
-    as
-    das
-    d
-    as
-
-
+﻿<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px;">
+    <span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;">Estimado participante;</span>
 </div>
+<div style="background-color: white;">
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px;">
+        <span style="font-family: &quot;arial&quot; , sans-serif;"><br /></span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px;">
+        <span style="font-family: &quot;arial&quot; , sans-serif;">Es un agrado saludarle,&nbsp;</span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <br style="text-align: start;" />
+        <span style="background-clip: initial; background-image: initial; background-origin: initial; background-position: initial; background-repeat: initial; background-size: initial; font-family: &quot;arial&quot; , sans-serif;"><span style="text-align: start;">Como parte de las actividades del Taller&nbsp;<b>"</b></span></span><span style="font-family: &quot;arial&quot; , sans-serif;"><b>Development of Essential Skills for HR Executive"</b> &nbsp;le hacemos llegar la&nbsp;</span><span style="font-family: &quot;arial&quot; , sans-serif;">AUTO EVALUACIÓN, se podrá acceder a los instrumentos para evaluar las destrezas de Trabajo en Equipo, Comunicaciones y Liderazgo.&nbsp;</span><br />
+        <span style="font-family: &quot;arial&quot; , sans-serif;"><br /></span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif;">Recuerde que esta evaluación, implica, su propia percepción y la de sus pares.&nbsp;</span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif;"><br /></span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif;">Para ello deberá seguir los siguientes pasos</span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif;"><br /></span>
+    </div>
+    <div class="MsoNormal" style="text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif;"><span style="color: #222222;"><span style="font-size: 12.8px;"><b>Auto-evaluación</b></span></span><b style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px;">:</b></span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <br />
+        <ol>
+            <li><span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;">Ingrese a los enlaces marcando</span><span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;">&nbsp;enter en los mismos. Le sugerimos, primero ver su presentación para poder evaluarla luego.&nbsp;</span></li>
+            <li>Ingrese la información de identificación solicitada.</li>
+            <li>Complete el instrumento.</li>
+            <li><span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;">Al contestar, sea</span><span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;">&nbsp;absolutamente sincero/a, ya que esta información le será de valiosa utilidad para su desarrollo profesional y personal.</span></li>
+        </ol>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;"><br /></span>
+    </div>
+    <div class="MsoNormal" style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;">Si tiene alguna duda , por favor comuníquese &nbsp;con el Administrador del Sistema.</span>
+    </div>
+    <div style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <br />
+    </div>
+    <div style="color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+        <span style="font-family: &quot;arial&quot; , sans-serif; font-size: 12.8px;">Muchas éxitos!!.</span>
+    </div>
+</div>
+<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+    <span style="font-family: &quot;arial&quot; , sans-serif;"><br /></span>
+</div>
+<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+    <span style="font-family: &quot;arial&quot; , sans-serif;">=======</span>
+</div>
+<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+    <span style="font-family: &quot;arial&quot; , sans-serif;"><br /></span>
+</div>
+<div style="background-color: white; color: #222222; font-family: arial, sans-serif; font-size: 12.8px; text-align: justify;">
+    <span style="font-family: &quot;arial&quot; , sans-serif;"><b>ENLACE PRUEBA:</b>&nbsp;&nbsp;<a href="http://msa.esan.edu.pe/Alumno/Registro/Formulario?idPromocion=1&amp;idMedicion=1&amp;idEvaluado=0&amp;Externo=False" target="_blank">Presione aquí</a></span>
+</div>
+
+@ViewBag.Email
