LinkController Index.cshtml y ListadoParticipanteDetalle.cshtml

--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Index.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Index.cshtml
@@ -132,7 +132,7 @@
         } else {
             
             $('#lblRutaLink').show();            
-            var url = "http://localhost:60303/" + "/Alumno/Evaluacion/frmEvaluacion?idMedicion=" + vMedicionID + "&idPromocion=" + vPromocionID + "&idEvaluado=0&Externo=false";
+            var url = "http://msa.esan.edu.pe/Alumno/Evaluacion/frmEvaluacion?idMedicion=" + vMedicionID + "&idPromocion=" + vPromocionID + "&idEvaluado=0&Externo=false";
             $('#lblRutaLink').attr('href', url);
             //$("#lblRutaLink").html(url);
         }
