--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/ListadoMedicion.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/ListadoMedicion.cshtml
@@ -19,7 +19,7 @@
 
 }
 
-<table class="table table-striped">
+<table class="table table-bordered table-striped display">
     <thead>
         <tr>
             <th>
