Ultimo commit LinkController

--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Email.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Link/Email.cshtml
@@ -16,7 +16,7 @@
             <span style="font-family: Arial, sans-serif;"><br /></span>
         </div>
         <div class="MsoNormal" style="font-size: 12.8px; text-align: justify;">
-            <span style="font-family: Arial, sans-serif;">Por el primero (INTRUMENTO), se podrá acceder a los cuestionario para evaluar las destrezas de Trabajo en Equipo, Comunicaciones y Liderazgo.&nbsp;</span><span style="font-family: Arial, sans-serif; font-size: 12.8px;">&nbsp;</span>
+            <span style="font-family: Arial, sans-serif;">Por el primero (INSTRUMENTO), se podrá acceder a los cuestionario para evaluar las destrezas de Trabajo en Equipo, Comunicaciones y Liderazgo.&nbsp;</span><span style="font-family: Arial, sans-serif; font-size: 12.8px;">&nbsp;</span>
         </div>
         <div class="MsoNormal" style="font-size: 12.8px; text-align: justify;">
             <span style="font-family: Arial, sans-serif; font-size: 12.8px;"><br /></span>
