--- a/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/Index.cshtml
+++ b/ESAN.EDU.PE.MSA/ESANMSA/Areas/Administrador/Views/Promocion/Index.cshtml
@@ -28,7 +28,7 @@
 <div id="divListadoPromocion"></div>
 <div class="alert alert-info" role="alert">
     <h4>
-        <strong>Mediciones</strong> <label id="lblMedicionSeleccion" class=""></label>
+        <strong>Mediciones</strong> <label id="lblMedicionSeleccion" class=""></label><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
     </h4>
 </div>
 <hr />
@@ -106,6 +106,27 @@
         var vFecIni = $("#mPopup").find("#txtFechaInicio").val();
         var vFecFin = $("#mPopup").find("#txtFechaFin").val();
 
+        if (vNomPromo == "") {
+            alert("Debe ingresar el nombre de la promoción");
+            $("#mPopup").find("#txtNombrePromocion").focus();
+            return false;
+        }
+        if (vEvaluacion == -1) {
+            alert("Debe seleccionar una evaluación");
+            $("#mPopup").find("#cboEvaluacion").focus();
+            return false;
+        }
+        if (vFecIni == "") {
+            alert("Debe ingresar la fecha inicio de la promoción");
+            $("#mPopup").find("#txtFechaInicio").focus();
+            return false;
+        }
+        if (vFecFin == "") {
+            alert("Debe ingresar la fecha fin de la promoción");
+            $("#mPopup").find("#txtFechaFin").focus();
+            return false;
+        }
+
         $.ajax({
             'url': URL_PAGE + 'Administrador/Promocion/GrabarPromocion',
             'type': 'POST',
@@ -123,6 +144,7 @@
         });
 
     });
+
 
     $(document).on('change', '.chkPersonalizarCodigo', function () {
         if (this.checked) {
